[tool.poetry]
name = "sales-script"
version = "0.1.0"
description = ""
authors = ["Sargun Vohra <sargun.vohra@findheadway.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fiona = "^1.9.6"
shapely = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
